# pyXpcsViewer

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  data_loader.py  example.py  file_locator.py  gui.py  hdf_reader.py  hdf_to_str.py  icons_rc.py  matplot_qt.py  pyproject.toml  requirements.txt  run_gui.sh  run_viewer  run_viewer.py  run_viewer_8idi  run_viewer_python  setup.py  test.py  tox.ini  update_ui.sh  xpcs.ui  xpcs_backup.ui  xpcs_fitting.py  xpcs_ui.py
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
script/: convert_ui.sh
script_mode_examples/: C2_phi.ipynb
scripts/: update_ui.sh
src/pyxpcsviewer/: __init__.py  cli.py  default_setting.py  file_locator.py  icons_rc.py  viewer.py  viewer_kernel.py  viewer_ui.py  xpcs_file.py  xpcs_viewer.py
src/pyxpcsviewer/configure/: aps_8idi.json
src/pyxpcsviewer/fileIO/: aps_8idi.py  ftype_utils.py  hdf_reader.py  qmap_utils.py
src/pyxpcsviewer/helper/: fitting.py  listmodel.py  logwriter.py  utlis.py
src/pyxpcsviewer/module/: __init__.py  average_toolbox.py  g2mod.py  intt.py  saxs1d.py  saxs2d.py  stability.py  twotime.py  twotime_utils.py
src/pyxpcsviewer/module_web/: saxs1d.py
src/pyxpcsviewer/plothandler/: matplot_qt.py  pyqtgraph_handler.py
src/pyxpcsviewer/ui/: xpcs.ui
src/pyxpcsviewer/ui/resources/: icons.qrc
tests/: __init__.py  test_pyxpcsviewer.py
xpcs_viewer/: PlotModule.py  __init__.py  data_loader.py  example.py  file_locator.py  gui.py  hdf_reader.py  icons_rc.py  matplot_qt.py  mpl_cmaps_in_ImageItem.py  plotwidget.py  pyqtgraph_handler.py  saxs1d.py  state_machine.py  test_image.py  viewer.py  viewer_kernel.py  viewer_ui.py  web_gui.py  xpcs_file.py  xpcs_ui.py  xpcs_viewer.py
xpcs_viewer/fileIO/: __init__.py  aps_8idi.py  file_locator.py  hdf_reader.py  hdf_to_str.py  qmap_utils.py
xpcs_viewer/helper/: fitting.py  listmodel.py
xpcs_viewer/module/: average_toolbox.py  g2mod.py  intt.py  listmodel.py  plotwidget.py  saxs1d.py  saxs2d.py  stability.py  tauq.py  twotime.py  twotime_utils.py
xpcs_viewer/plothandler/: __init__.py  matplot_qt.py  pyqtgraph_handler.py
xpcs_viewer/ui/: example.ui  label_edittor.ui  saxs1d.py  saxs1d.ui  xpcs.ui  xpcs_ui.py
xpcs_viewer/ui/resources/: icon_rc.py  icons.qrc
