[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxpcsviewer"
version = "0.3.0"
description = "None"
readme = "README.rst"
authors = [
  {name = "Miaoqi Chu", email = "mqichu@anl.gov"}
]
maintainers = [
  {name = "Miaoqi Chu", email = "mqichu@anl.gov"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/AZjk/pyxpcsviewer/issues"
changelog = "https://github.com/AZjk/pyxpcsviewer/blob/master/changelog.md"
homepage = "https://github.com/AZjk/pyxpcsviewer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

